<?xml version="1.0"?>
<package format="2">
  <name>mandeye_unicorn</name>
  <version>0.0.0</version>
  <description>mandeye_unicorn</description>
  <maintainer email="michalpelka@gmail.com">michal</maintainer>
  <license>MIT</license>



  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <exec_depend>ros2launch</exec_depend>

  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>